@@ -955,7 +955,11 @@ int cmdlineoptions(int ac, char **av)
 	       terminals such as mintty, because we cannot disable buffering in
 	       the terminal. One can only do that from applications linked
 	       against the Cygwin runtime, but R is linked against Msvcrt
-	       via Mingw and using multiple runtimes is not possible. */
+	       via Mingw and using multiple runtimes is not possible.
+
+	       Msys2/cygwin is handled in AppMain() by re-executing using
+	       winpty. This branch is taken when winpty is not available.
+	    */
 	    Rp->R_Interactive = TRUE;
 	    Rp->ReadConsole = ThreadedReadConsole;
 	    InThreadReadConsole = FileReadConsole;
